--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -57,3 +57,13 @@
     @apply transition-all duration-300 ease-in-out;
   }
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+  @apply text-white bg-dark/50 rounded-full w-10 h-10 !static;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  @apply text-base;
+}
